--- a/src/styles/components/_SiteHeader.scss
+++ b/src/styles/components/_SiteHeader.scss
@@ -25,4 +25,14 @@
 .site-header__link {
   margin-left: 1.5rem;
   font-size: 0.95rem;
+  @media screen and (max-width: 500px) {
+    margin-left: 0.9rem;
+  }
+}
+
+.sp {
+  display: none;
+  @media screen and (max-width: 500px) {
+    display: block;
+  }
 }
